--- a/src/Backend/src/main/resources/static/admin-dashboard.html
+++ b/src/Backend/src/main/resources/static/admin-dashboard.html
@@ -557,6 +557,62 @@
     </div>
 
 
+    <!-- Dispute Detail Modal -->
+    <div id="disputeDetailModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
+        <div class="bg-white rounded-2xl shadow-2xl max-w-4xl w-full max-h-[90vh] overflow-y-auto">
+            <div class="sticky top-0 bg-white border-b border-gray-100 p-6 flex justify-between items-center z-10">
+                <h3 class="text-xl font-bold text-gray-800">Chi tiết khiếu nại</h3>
+                <button onclick="closeDisputeDetailModal()" class="text-gray-400 hover:text-gray-600">
+                    <i class="fas fa-times text-xl"></i>
+                </button>
+            </div>
+            <div id="disputeDetailContent" class="p-6">
+                <div class="text-center py-10 text-gray-500"><i class="fas fa-spinner fa-spin text-2xl"></i> Đang tải...</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Dispute Review Modal -->
+    <div id="disputeReviewModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-6 m-4">
+            <div class="flex justify-between items-center mb-6">
+                <h3 class="text-xl font-bold text-gray-800">Xử lý khiếu nại</h3>
+                <button onclick="closeDisputeReviewModal()" class="text-gray-400 hover:text-gray-600 transition">
+                    <i class="fas fa-times text-xl"></i>
+                </button>
+            </div>
+            <div class="space-y-4">
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-2">Trạng thái</label>
+                    <select id="disputeReviewStatus" onchange="toggleRefundOption()" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#AD3029]/20 outline-none">
+                        <option value="IN_REVIEW">IN_REVIEW - Đang xem xét</option>
+                        <option value="RESOLVED">RESOLVED - Đã giải quyết</option>
+                        <option value="REJECTED">REJECTED - Từ chối</option>
+                    </select>
+                </div>
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-2">Ghi chú Admin</label>
+                    <textarea id="disputeReviewNote" rows="3" placeholder="Ghi chú xử lý..."
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#AD3029]/20 outline-none resize-none"></textarea>
+                </div>
+                <div id="disputeRefundOption" class="hidden">
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="checkbox" id="disputeApproveRefund" class="rounded">
+                        <span class="font-medium text-gray-700">Hoàn tiền cho buyer</span>
+                    </label>
+                    <div id="disputeRefundAmountWrap" class="mt-2 hidden">
+                        <label class="block text-sm text-gray-600 mb-1">Số tiền (₫) - để trống = full đơn hàng</label>
+                        <input type="number" id="disputeRefundAmount" placeholder="VD: 1113000" class="w-full px-4 py-2 border border-gray-300 rounded-lg">
+                    </div>
+                </div>
+                <div class="flex gap-3 pt-4">
+                    <button onclick="closeDisputeReviewModal()" class="flex-1 bg-gray-100 text-gray-700 py-2 rounded-lg font-bold hover:bg-gray-200 transition">Hủy</button>
+                    <button onclick="confirmDisputeReview()" class="flex-1 bg-[#AD3029] text-white py-2 rounded-lg font-bold hover:opacity-90 transition">Xác nhận</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Rejection Reason Modal -->
     <div id="rejectionModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center">
         <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-6 m-4">
@@ -1586,7 +1642,10 @@
                             ${dispute.status}
                         </span>
                     </td>
-                    <td class="px-6 py-4 text-right">
+                    <td class="px-6 py-4 text-right flex gap-2 justify-end">
+                        <button onclick="showDisputeDetail('${dispute.id}')" class="text-blue-600 hover:opacity-80 font-bold text-xs ring-1 ring-blue-200 px-2 py-1 rounded">
+                            View Detail
+                        </button>
                         <button onclick="reviewDispute('${dispute.id}')" class="text-[#AD3029] hover:opacity-80 font-bold text-xs ring-1 ring-[#AD3029]/20 px-2 py-1 rounded">
                             Review
                         </button>
@@ -1606,28 +1665,182 @@
             }
         }
 
-
-        async function reviewDispute(id) {
-            const status = prompt('Enter new status (OPEN, IN_REVIEW, RESOLVED, REJECTED):', 'IN_REVIEW');
-            if (!status) return;
-
-
-            const adminNote = prompt('Enter admin note:');
-
+        async function showDisputeDetail(disputeId) {
+            const container = document.getElementById('disputeDetailContent');
+            container.innerHTML = '<div class="text-center py-10 text-gray-500"><i class="fas fa-spinner fa-spin text-2xl"></i> Đang tải...</div>';
+            document.getElementById('disputeDetailModal').classList.remove('hidden');
 
             try {
-                const response = await fetch(`http://localhost:8080/api/admin/disputes/${id}/review`, {
+                const [disputeRes, imagesRes] = await Promise.all([
+                    fetch(`http://localhost:8080/api/disputes/${disputeId}`, { headers: { 'Authorization': `Bearer ${token}` } }),
+                    fetch(`http://localhost:8080/api/disputes/${disputeId}/images`, { headers: { 'Authorization': `Bearer ${token}` } })
+                ]);
+                if (!disputeRes.ok) throw new Error('Failed to load dispute');
+                const dispute = await disputeRes.json();
+                const images = imagesRes.ok ? await imagesRes.json() : [];
+
+                let order = null;
+                if (dispute.orderId) {
+                    try {
+                        const orderRes = await fetch(`http://localhost:8080/api/orders/${dispute.orderId}`, { headers: { 'Authorization': `Bearer ${token}` } });
+                        if (orderRes.ok) order = await orderRes.json();
+                    } catch (e) { console.warn('Order fetch failed:', e); }
+                }
+
+                renderDisputeDetail(dispute, order, images);
+            } catch (err) {
+                console.error(err);
+                container.innerHTML = '<div class="text-center py-10 text-red-500"><i class="fas fa-exclamation-circle mr-2"></i>Không tải được chi tiết.</div>';
+            }
+        }
+
+        function formatShippingAddress(addr) {
+            if (!addr) return 'N/A';
+            if (typeof addr === 'string') return addr;
+            const parts = [addr.address, addr.ward, addr.district, addr.city].filter(Boolean);
+            const fullAddr = parts.join(', ') || 'N/A';
+            const namePhone = [addr.fullName, addr.phone].filter(Boolean).join(' - ');
+            return namePhone ? `${namePhone}<br><span class="text-gray-700">${fullAddr}</span>` : fullAddr;
+        }
+
+        function renderDisputeDetail(dispute, order, images) {
+            const container = document.getElementById('disputeDetailContent');
+            const items = order?.displayItems || order?.items || [];
+            const itemsHtml = items.map(item => `
+                <div class="flex gap-4 p-4 border-b border-gray-100">
+                    <img src="${item.productImage || 'https://via.placeholder.com/80'}" class="w-20 h-20 object-cover rounded border">
+                    <div class="flex-1">
+                        <p class="font-bold text-gray-800">${item.productName || 'Product'}</p>
+                        <p class="text-sm text-gray-500">${item.variantName || ''}</p>
+                        <p class="text-sm text-gray-600">Qty: ${item.quantity || 1}</p>
+                    </div>
+                    <p class="font-bold text-orange-600">₫${Number((item.price || 0) * (item.quantity || 1)).toLocaleString()}</p>
+                </div>
+            `).join('') || '<p class="p-4 text-gray-500">Không có sản phẩm</p>';
+
+            const imagesHtml = images.length > 0 ? images.map(img => `
+                <a href="${img.imageUrl}" target="_blank" class="block w-24 h-24 rounded-lg overflow-hidden border-2 border-gray-200 hover:border-orange-500 transition">
+                    <img src="${img.imageUrl}" alt="Minh chứng" class="w-full h-full object-cover">
+                </a>
+            `).join('') : '<p class="text-gray-500 text-sm">Không có ảnh minh chứng</p>';
+
+            container.innerHTML = `
+                <div class="space-y-6">
+                    <div>
+                        <h4 class="font-bold text-gray-800 mb-3">Thông tin khiếu nại</h4>
+                        <div class="bg-gray-50 p-4 rounded-lg space-y-2">
+                            <p><span class="text-gray-600">Dispute ID:</span> <span class="font-mono text-sm">${dispute.id}</span></p>
+                            <p><span class="text-gray-600">Order ID:</span> <span class="font-mono text-sm">${dispute.orderId || '-'}</span></p>
+                            <p><span class="text-gray-600">Buyer:</span> ${dispute.buyerId || '-'}</p>
+                            <p><span class="text-gray-600">Lý do:</span> <span class="font-semibold text-[#AD3029]">${dispute.reason || '-'}</span></p>
+                            <p><span class="text-gray-600">Mô tả:</span> ${dispute.description || '-'}</p>
+                            <p><span class="text-gray-600">Trạng thái:</span> <span class="px-2 py-1 rounded-full text-xs font-bold ${getStatusBadgeClass(dispute.status)}">${dispute.status}</span></p>
+                            ${dispute.adminNote ? `<p><span class="text-gray-600">Ghi chú Admin:</span> ${dispute.adminNote}</p>` : ''}
+                            <p><span class="text-gray-600">Ngày tạo:</span> ${dispute.createdAt ? new Date(dispute.createdAt).toLocaleString('vi-VN') : '-'}</p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <h4 class="font-bold text-gray-800 mb-3">Ảnh minh chứng (buyer gửi)</h4>
+                        <div class="flex flex-wrap gap-3">
+                            ${imagesHtml}
+                        </div>
+                    </div>
+
+                    ${order ? `
+                    <div>
+                        <h4 class="font-bold text-gray-800 mb-3">Thông tin đơn hàng</h4>
+                        <div class="bg-gray-50 p-4 rounded-lg space-y-2 mb-4">
+                            <p><span class="text-gray-600">Trạng thái đơn:</span> ${order.orderStatus || '-'}</p>
+                            <p><span class="text-gray-600">Tổng tiền:</span> <span class="font-bold text-orange-600">₫${Number(order.totalPrice || 0).toLocaleString()}</span></p>
+                        </div>
+                        <h5 class="font-semibold text-gray-700 mb-2">Sản phẩm</h5>
+                        <div class="border border-gray-200 rounded-lg overflow-hidden">
+                            ${itemsHtml}
+                        </div>
+                    </div>
+
+                    ${order.shipping ? `
+                    <div>
+                        <h4 class="font-bold text-gray-800 mb-3">Địa chỉ giao hàng</h4>
+                        <div class="bg-gray-50 p-4 rounded-lg">
+                            ${formatShippingAddress(order.shipping.address)}
+                        </div>
+                    </div>
+                    ` : ''}
+                    ` : '<p class="text-gray-500">Không tải được thông tin đơn hàng.</p>'}
+
+                    <div class="pt-4 border-t">
+                        <button onclick="closeDisputeDetailModal(); reviewDispute('${dispute.id}')" 
+                            class="px-6 py-2 bg-[#AD3029] text-white rounded-lg font-bold hover:opacity-90 transition">
+                            <i class="fas fa-gavel mr-2"></i>Xử lý khiếu nại
+                        </button>
+                    </div>
+                </div>
+            `;
+        }
+
+        function closeDisputeDetailModal() {
+            document.getElementById('disputeDetailModal').classList.add('hidden');
+        }
+
+        let currentReviewDisputeId = null;
+
+        function toggleRefundOption() {
+            const status = document.getElementById('disputeReviewStatus').value;
+            const opt = document.getElementById('disputeRefundOption');
+            const wrap = document.getElementById('disputeRefundAmountWrap');
+            const cb = document.getElementById('disputeApproveRefund');
+            if (status === 'RESOLVED') {
+                opt.classList.remove('hidden');
+                wrap.classList.toggle('hidden', !cb.checked);
+            } else {
+                opt.classList.add('hidden');
+            }
+        }
+
+        document.getElementById('disputeApproveRefund')?.addEventListener('change', () => {
+            document.getElementById('disputeRefundAmountWrap').classList.toggle('hidden', !document.getElementById('disputeApproveRefund').checked);
+        });
+
+        function reviewDispute(id) {
+            currentReviewDisputeId = id;
+            document.getElementById('disputeReviewStatus').value = 'RESOLVED';
+            document.getElementById('disputeReviewNote').value = '';
+            document.getElementById('disputeApproveRefund').checked = false;
+            document.getElementById('disputeRefundAmount').value = '';
+            toggleRefundOption();
+            document.getElementById('disputeReviewModal').classList.remove('hidden');
+        }
+
+        function closeDisputeReviewModal() {
+            currentReviewDisputeId = null;
+            document.getElementById('disputeReviewModal').classList.add('hidden');
+        }
+
+        async function confirmDisputeReview() {
+            if (!currentReviewDisputeId) return;
+            const status = document.getElementById('disputeReviewStatus').value;
+            const adminNote = document.getElementById('disputeReviewNote').value;
+            const approveRefund = document.getElementById('disputeApproveRefund').checked;
+            const refundAmountVal = document.getElementById('disputeRefundAmount').value.trim();
+            const refundAmount = refundAmountVal ? parseFloat(refundAmountVal) : null;
+
+            const body = { status, adminNote };
+            if (status === 'RESOLVED' && approveRefund) {
+                body.approveRefund = true;
+                if (refundAmount > 0) body.refundAmount = refundAmount;
+            }
+
+            try {
+                const response = await fetch(`http://localhost:8080/api/admin/disputes/${currentReviewDisputeId}/review`, {
                     method: 'PUT',
-                    headers: {
-                        'Authorization': `Bearer ${token}`,
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ status, adminNote })
+                    headers: { 'Authorization': `Bearer ${token}`, 'Content-Type': 'application/json' },
+                    body: JSON.stringify(body)
                 });
-
-
                 if (response.ok) {
-                    showToast('Dispute updated successfully', 'success');
+                    showToast(approveRefund ? 'Đã giải quyết và duyệt hoàn tiền' : 'Đã cập nhật khiếu nại', 'success');
+                    closeDisputeReviewModal();
                     loadDisputes();
                 } else {
                     showToast('Failed to update dispute', 'error');
