--- a/src/Backend/src/main/resources/static/index.html
+++ b/src/Backend/src/main/resources/static/index.html
@@ -536,9 +536,9 @@
                     priceDisplay = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(price);
                 }
 
-                // Random Sold Count & Rating for demo effect (since backend might not have it populated fully yet)
-                const sold = product.sold || Math.floor(Math.random() * 100) + 5;
-                const rating = product.rating ? product.rating.toFixed(1) : (Math.random() * (5.0 - 4.5) + 4.5).toFixed(1);
+                // Use real sold & rating from API (synced from orders & reviews)
+                const sold = product.sold != null ? product.sold : 0;
+                const rating = product.rating != null ? product.rating.toFixed(1) : '-';
 
                 // Badge Logic
                 let badgeHtml = '';
