--- a/src/Frontend/daily-discover.html
+++ b/src/Frontend/daily-discover.html
@@ -147,12 +147,12 @@
                     const randomBadge = badges[Math.floor(Math.random() * badges.length)];
                     const badgeColor = randomBadge === 'HOT' ? 'bg-red-500' : (randomBadge === 'NEW' ? 'bg-green-500' : 'bg-orange-500');
 
-                    // Stats
-                    const soldCount = product.sold || Math.floor(Math.random() * 500) + 10;
-                    const rating = (Math.random() * 1 + 4).toFixed(1);
+                    // Stats - use real data from API
+                    const soldCount = product.sold != null ? product.sold : 0;
+                    const rating = product.rating != null ? product.rating.toFixed(1) : '-';
 
                     return `
-                    <div onclick="window.location.href='product-detail.html?id=${product.id}'" 
+                    <div onclick="localStorage.setItem('lastClickedProductId', '${product.id}'); sessionStorage.setItem('lastClickedProductId', '${product.id}'); window.location.href='product-detail.html?id=${product.id}'" 
                          class="bg-white rounded-lg shadow hover:shadow-lg transition-all overflow-hidden group cursor-pointer border border-transparent hover:border-orange-500">
                         <div class="relative">
                             <img src="${imageUrl}" alt="${product.name}" class="w-full h-48 object-cover">
