--- a/src/Frontend/flash-sale.html
+++ b/src/Frontend/flash-sale.html
@@ -155,7 +155,7 @@
                     const progressPercent = Math.min(soldCount, 100);
 
                     return `
-                    <div onclick="window.location.href='product-detail.html?id=${product.id}'" 
+                    <div onclick="localStorage.setItem('lastClickedProductId', '${product.id}'); sessionStorage.setItem('lastClickedProductId', '${product.id}'); window.location.href='product-detail.html?id=${product.id}'" 
                          class="bg-white rounded-lg shadow hover:shadow-lg transition-all overflow-hidden group cursor-pointer border border-transparent hover:border-orange-500">
                         <div class="relative">
                             <img src="${imageUrl}" alt="${product.name}" class="w-full h-48 object-cover">
