--- a/src/Frontend/admin-dashboard.html
+++ b/src/Frontend/admin-dashboard.html
@@ -155,6 +155,9 @@
                             <button id="btn-7days" onclick="handleTimeFilter(7)"
                                 class="px-4 py-1.5 text-sm font-medium text-gray-600 hover:bg-gray-50 rounded">Last 7
                                 Days</button>
+                            <button id="btn-30days" onclick="handleTimeFilter(30)"
+                                class="px-4 py-1.5 text-sm font-medium text-gray-600 hover:bg-gray-50 rounded">Last 30
+                                Days</button>
                         </div>
                         <button
                             class="bg-white border border-gray-200 text-gray-700 px-4 py-1.5 rounded-lg text-sm font-medium shadow-sm hover:bg-gray-50 flex items-center gap-2">
@@ -217,7 +220,7 @@
                         <div class="flex justify-between items-center mb-6">
                             <div>
                                 <h3 class="text-lg font-bold text-gray-800">Registration Trend</h3>
-                                <p class="text-xs text-gray-500">Daily new users & shops (Last 7 days)</p>
+                                <p class="text-xs text-gray-500">Daily new users, shops & disputes (Last 7 days)</p>
                             </div>
                             <div class="bg-gray-100 rounded-lg p-1 flex text-xs font-medium">
                                 <button class="px-3 py-1 bg-white shadow-sm rounded">Volume</button>
@@ -330,7 +333,7 @@
                     <div class="bg-white p-6 rounded-2xl border border-gray-100 shadow-sm">
                         <div class="flex justify-between items-center mb-6">
                             <h3 class="text-lg font-bold text-gray-800">Top Selling Products</h3>
-                            <a href="#" onclick="switchView('products')"
+                            <a href="#" onclick="loadProducts('sold_desc'); switchView('products')"
                                 class="text-sm font-bold text-[#AD3029] hover:underline">View All</a>
                         </div>
                         <div class="overflow-x-auto">
@@ -555,7 +558,8 @@
 
 
     <!-- Dispute Detail Modal -->
-    <div id="disputeDetailModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
+    <div id="disputeDetailModal"
+        class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
         <div class="bg-white rounded-2xl shadow-2xl max-w-4xl w-full max-h-[90vh] overflow-y-auto">
             <div class="sticky top-0 bg-white border-b border-gray-100 p-6 flex justify-between items-center z-10">
                 <h3 class="text-xl font-bold text-gray-800">Chi tiết khiếu nại</h3>
@@ -564,13 +568,15 @@
                 </button>
             </div>
             <div id="disputeDetailContent" class="p-6">
-                <div class="text-center py-10 text-gray-500"><i class="fas fa-spinner fa-spin text-2xl"></i> Đang tải...</div>
+                <div class="text-center py-10 text-gray-500"><i class="fas fa-spinner fa-spin text-2xl"></i> Đang tải...
+                </div>
             </div>
         </div>
     </div>
 
     <!-- Dispute Review Modal -->
-    <div id="disputeReviewModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center">
+    <div id="disputeReviewModal"
+        class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center">
         <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-6 m-4">
             <div class="flex justify-between items-center mb-6">
                 <h3 class="text-xl font-bold text-gray-800">Xử lý khiếu nại</h3>
@@ -581,7 +587,8 @@
             <div class="space-y-4">
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">Trạng thái</label>
-                    <select id="disputeReviewStatus" onchange="toggleRefundOption()" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#AD3029]/20 outline-none">
+                    <select id="disputeReviewStatus" onchange="toggleRefundOption()"
+                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#AD3029]/20 outline-none">
                         <option value="IN_REVIEW">IN_REVIEW - Đang xem xét</option>
                         <option value="RESOLVED">RESOLVED - Đã giải quyết</option>
                         <option value="REJECTED">REJECTED - Từ chối</option>
@@ -599,12 +606,16 @@
                     </label>
                     <div id="disputeRefundAmountWrap" class="mt-2 hidden">
                         <label class="block text-sm text-gray-600 mb-1">Số tiền (₫) - để trống = full đơn hàng</label>
-                        <input type="number" id="disputeRefundAmount" placeholder="VD: 1113000" class="w-full px-4 py-2 border border-gray-300 rounded-lg">
+                        <input type="number" id="disputeRefundAmount" placeholder="VD: 1113000"
+                            class="w-full px-4 py-2 border border-gray-300 rounded-lg">
                     </div>
                 </div>
                 <div class="flex gap-3 pt-4">
-                    <button onclick="closeDisputeReviewModal()" class="flex-1 bg-gray-100 text-gray-700 py-2 rounded-lg font-bold hover:bg-gray-200 transition">Hủy</button>
-                    <button onclick="confirmDisputeReview()" class="flex-1 bg-[#AD3029] text-white py-2 rounded-lg font-bold hover:opacity-90 transition">Xác nhận</button>
+                    <button onclick="closeDisputeReviewModal()"
+                        class="flex-1 bg-gray-100 text-gray-700 py-2 rounded-lg font-bold hover:bg-gray-200 transition">Hủy</button>
+                    <button onclick="confirmDisputeReview()"
+                        class="flex-1 bg-[#AD3029] text-white py-2 rounded-lg font-bold hover:opacity-90 transition">Xác
+                        nhận</button>
                 </div>
             </div>
         </div>
@@ -771,7 +782,8 @@
             const buttons = {
                 1: document.getElementById('btn-today'),
                 0: document.getElementById('btn-yesterday'),
-                7: document.getElementById('btn-7days')
+                7: document.getElementById('btn-7days'),
+                30: document.getElementById('btn-30days')
             };
 
 
@@ -787,6 +799,15 @@
                 activeBtn.classList.add('bg-[#AD3029]', 'text-white', 'shadow-sm');
             }
 
+
+            // Update Title
+            const labels = {
+                1: 'Today',
+                0: 'Yesterday',
+                7: 'Last 7 Days',
+                30: 'Last 30 Days'
+            };
+            document.querySelector('#view-dashboard h3.text-lg').nextElementSibling.textContent = `Daily new users, shops & disputes (${labels[days]})`;
 
             // Reload stats
             loadDashboardStats(days);
@@ -825,6 +846,16 @@
                             tension: 0.4,
                             pointRadius: 4,
                             fill: true
+                        },
+                        {
+                            label: 'New Disputes',
+                            data: [],
+                            borderColor: '#9333EA', // Purple
+                            backgroundColor: 'rgba(147, 51, 234, 0.1)',
+                            borderWidth: 3,
+                            tension: 0.4,
+                            pointRadius: 4,
+                            fill: true
                         }
                     ]
                 },
@@ -853,18 +884,20 @@
         }
 
 
-        function updateRegistrationChart(userTrend, shopTrend) {
+        function updateRegistrationChart(userTrend, shopTrend, disputeTrend) {
             if (!registrationChart) return;
 
 
             const labels = userTrend.map(t => t.date);
             const userData = userTrend.map(t => t.count);
             const shopData = shopTrend.map(t => t.count);
+            const disputeData = disputeTrend ? disputeTrend.map(t => t.count) : [];
 
 
             registrationChart.data.labels = labels;
             registrationChart.data.datasets[0].data = userData;
             registrationChart.data.datasets[1].data = shopData;
+            registrationChart.data.datasets[2].data = disputeData;
             registrationChart.update();
         }
 
@@ -1497,7 +1530,7 @@
 
                     // Update Chart with real trend data
                     if (stats.userTrend && stats.shopTrend) {
-                        updateRegistrationChart(stats.userTrend, stats.shopTrend);
+                        updateRegistrationChart(stats.userTrend, stats.shopTrend, stats.disputeTrend);
                     }
 
 
@@ -1863,7 +1896,7 @@
 
 
         // --- PRODUCTS LOGIC ---
-        async function loadProducts() {
+        async function loadProducts(sortBy = null) {
             const container = document.getElementById('productsList');
             if (!container) return;
 
@@ -1872,7 +1905,10 @@
 
 
             try {
-                const response = await fetch('http://localhost:8080/api/products', {
+                let url = 'http://localhost:8080/api/products';
+                if (sortBy) url += `?sort=${sortBy}`;
+
+                const response = await fetch(url, {
                     headers: { 'Authorization': `Bearer ${token}` }
                 });
 
